--- a/myproject/mysite/templates/base.html
+++ b/myproject/mysite/templates/base.html
@@ -108,7 +108,8 @@
                         </div>
 
                     </div>
-                    <p>&copy; 2020 NZRECTC Society pvt ltd. All Rights Reserved | Design by</p>
+                    <p>&copy; 2020 NZRECTC Society pvt ltd. All Rights Reserved | Design by <span
+                            class="ourcompany">Tyranno Software</span></p>
                 </div>
 
             </div>
