--- a/myproject/mysite/templates/index.html
+++ b/myproject/mysite/templates/index.html
@@ -63,7 +63,8 @@
                     <p>Chairman Message:</p>
 
                     <marquee>
-                        <p id="cmtext"></p>
+                        <p id="cmtext">Welcome To The Northern Zone Railway Employees Co-Operative Thrift And Credit
+                            Society Ltd</p>
                     </marquee>
                 </div>
             </div>
